# openbb-snaptrade

./: .dockerignore  .gitignore  Caddyfile  Caddyfile.local  Dockerfile  README.md  TEST_REPORT_PII_AND_CACHING.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
openbb_snaptrade/: app.py  auth.py  config.py  context.py  iframe.py  mcp_server.py  snaptrade_client.py  transforms.py  user_store.py
openbb_snaptrade/static/: apps.json  openbb_iframe_bridge.js  portfolio_overview.css  portfolio_overview.html  portfolio_overview.js  snaptrade.css  snaptrade.js  snaptrade_connection_portal.html  snaptrade_init.js  snaptrade_trade.css  snaptrade_trade.html  snaptrade_trade.js  widgets.json
openbb_snaptrade/widgets/: __init__.py  connection_portal.py  portfolio_overview.py  reference_data.py  sdk_passthrough.py  snaptrade_trade.py
